# algo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  assist.py  config.json  generator.cpp  header.hpp  rithm.py  run.py  run_coverage.sh  stupid.cpp  template.cpp  test.sh  tree_generator.cpp
tests/: CMakeLists.txt  header_test.cpp  include_all.cpp  run.cpp  task.json
tests/algebra/: least_prime_factors.cpp  task.json
tests/binary_search/tests/: unit.cpp
tests/data_structures/dsu/: solution.cpp  task.json
tests/flows/kuhn/: solution.cpp  task.json
tests/flows/max_flow/: stress.cpp  unit.cpp
tests/framework/: CMakeLists.txt  test.hpp
tests/framework/stubs/: dummies.hpp
tests/graphs/articulation_points/: stress.cpp  unit.cpp
tests/graphs/bridges/: correct.hpp  stress.cpp  unit.cpp
tests/graphs/grid/: unit.cpp
tests/graphs/scc/: scc.cpp  solution.cpp  task.json
tests/misc/: dsu.cpp  task.json
tests/ranges/prefix_sums/: stress.cpp
tests/strings/aho_corasick/: aho_corasick.cpp  count_unit.cpp  leftmost_unit.cpp  task.json
tests/strings/lcp_array/: stress.cpp
tests/strings/prefix_function/: prefix_function.cpp  solution.cpp  task.json
tests/strings/suffix_array/: solution.cpp  suffix_array.cpp  task.json
tests/strings/suffix_tree/: solution.cpp  task.json
tests/strings/z_function/: solution.cpp  task.json  z_function.cpp
tests/testing/: asserts.hpp
tests/testing/stubs/: move_only.hpp  non_default.hpp
tests/tests/binary_search/: unit.cpp
tests/utils/: task.json  traits.cpp
(+504 files in other folders)
